<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical"
    tools:context=".TelaControleDosDispositivos">


    <Button
        android:id="@+id/buttonVoltarTelaControleDisp"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_voltar"
        android:text="@string/activity_main_tela_controle_dispositivos_voltar"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewTempTelaControleDisp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/activity_main_tela_controle_dispositivos_temperatura"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/activity_main_tela_controle_dispositivos_aumentar"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/activity_main_tela_controle_dispositivos_diminuir"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/activity_main_tela_controle_dispositivos_OnOff"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>