<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical"
    tools:context=".TelaCadastroEquipamentos" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textViewTituloTelaCadastroEquip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_tela_cadatrar_equipamento"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewMarcaTelaCadastroEquip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_main_tela_cadastro_equipamento_marca"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerMarcaTelaCadastroEquip"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:entries="@array/activity_tela_cadastro_equipamento_lista_marca" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_main_tela_cadastro_equipamento_tipo"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerTipoTelaCadastroEquip"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:entries="@array/activity_tela_cadastro_equipamento_lista_tipo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_main_tela_cadastro_equipamento_local"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextLocalTelaCadastroEquip"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:layout_gravity="center"
        android:background="@color/white"
        android:hint="Local do equipamento" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSalvarTelaCadastroEquip"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/activity_main_tela_cadastro_equipamento_salvar"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonExcluirTelaCadastroEquip"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/buttonbackground"
        android:text="@string/activity_main_tela_cadastro_equipamento_excluir" />

</LinearLayout>